--- a/app/src/main/res/layout/activity_superacchome.xml
+++ b/app/src/main/res/layout/activity_superacchome.xml
@@ -112,7 +112,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText2">
@@ -245,6 +244,77 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <!-- Third Grid Cell -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/addMedicine"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="8dp"
+                app:cardBackgroundColor="@color/teal_700"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                android:layout_columnSpan="1">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical|center_horizontal">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/baseline_medication_24"
+                        app:tint="@color/white" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Medicine"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <!-- Third Grid Cell -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/addDepartment"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="8dp"
+                app:cardBackgroundColor="@color/teal_700"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                android:layout_columnSpan="1">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical|center_horizontal">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/baseline_apartment_24"
+                        app:tint="@color/white" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Department"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
             <!-- Third Grid Cell -->
             <androidx.cardview.widget.CardView
@@ -288,131 +358,12 @@
 
             <!-- First Grid Cell -->
             <androidx.cardview.widget.CardView
-                android:id="@+id/createAppointment"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_row="1"
-                android:layout_rowWeight="1"
-                android:layout_column="1"
-                android:layout_columnSpan="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                android:background="@color/black"
-                app:cardBackgroundColor="@color/teal_700"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/baseline_book_24"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Create Appointment"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Second Grid Cell -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/viewAppointment"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_row="1"
-                android:layout_rowWeight="1"
-                android:layout_column="2"
-                android:layout_columnSpan="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                android:background="@color/black"
-                app:cardBackgroundColor="@color/teal_700"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/baseline_local_activity_24"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="View Activity"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Third Grid Cell -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/disableAppointment"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_row="2"
-                android:layout_rowWeight="1"
-                android:layout_column="0"
-                android:layout_columnSpan="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                android:background="@color/black"
-                app:cardBackgroundColor="@color/teal_700"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/baseline_desktop_access_disabled_24"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Disable Appointment"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <!-- First Grid Cell -->
-            <androidx.cardview.widget.CardView
                 android:id="@+id/bookingAppointment"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:layout_column="1"
+                android:layout_column="0"
                 android:layout_columnSpan="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
@@ -452,7 +403,7 @@
                 android:layout_height="100dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:layout_column="2"
+                android:layout_column="1"
                 android:layout_columnSpan="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
@@ -492,7 +443,7 @@
                 android:layout_height="100dp"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
-                android:layout_column="2"
+                android:layout_column="1"
                 android:layout_columnSpan="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
@@ -532,7 +483,7 @@
                 android:layout_height="100dp"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
-                android:layout_column="1"
+                android:layout_column="0"
                 android:layout_columnSpan="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
@@ -571,9 +522,9 @@
                 android:id="@+id/viewIllness"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_row="3"
+                android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:layout_column="0"
+                android:layout_column="2"
                 android:layout_columnSpan="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
