--- a/app/src/main/res/layout/doctorlist_card_view.xml
+++ b/app/src/main/res/layout/doctorlist_card_view.xml
@@ -19,6 +19,7 @@
             android:layout_height="100dp"
             android:src="@drawable/baseline_person_24"
             android:scaleType="centerCrop"
+            android:layout_centerVertical="true"
             />
 
         <TextView
